--- a/index.html
+++ b/index.html
@@ -13,6 +13,70 @@
     <title>Перша сторінка</title>
   </head>
   <body>
-    
-  </body> 
+    <div class="container">
+      <h1>Heading 1</h1>
+      <h2>Heading 2</h2>
+      <h3>Heading 3</h3>
+      <h4>Heading 4</h4>
+      <h5>Heading 5</h5>
+      <h6>Heading 6</h6>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum exercitationem dolores quaerat eos non ex animi, laboriosam omnis eaque excepturi reiciendis vero fugiat natus consequuntur, obcaecati debitis a inventore nulla.</p>
+
+      <a href="https://fonts.google.com/" target="_blank">Click me</a>
+      <a href="mailto:info@dut.edu.ua" target="_blank">Email me</a>
+      <a href="tel:+3804328958299532">Call me</a>
+
+      <ul>
+        <li>
+          <div>
+            <h3>Test1</h3>
+            <div class="image">
+              <img src="https://imagecompressor.com/images/imagecompressor/logo.svg" alt="Image from site">
+            </div>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>Test2</h3>
+            <div class="image">
+              <img src="https://imagecompressor.com/images/imagecompressor/logo.svg" alt="Image from site">
+            </div>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>Test3</h3>
+            <div class="image">
+              <img src="https://imagecompressor.com/images/imagecompressor/logo.svg" alt="Image from site">
+            </div>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>Test4</h3>
+            <div class="image">
+              <img src="https://imagecompressor.com/images/imagecompressor/logo.svg" alt="Image from site">
+            </div>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>Test5</h3>
+            <div class="image">
+              <img src="https://imagecompressor.com/images/imagecompressor/logo.svg" alt="Image from site">
+            </div>
+          </div>
+        </li>
+      </ul>
+
+      <ol>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+        <li>Four</li>
+        <li>Five</li>
+      </ol>
+    </body> 
+    </div>
 </html>
